<resources>
    <string name="app_name">GrocerySQLite</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email *</string>
    <string name="enter_pass">Enter Password *</string>
    <string name="enter_name">Enter Name *</string>

    <string name="manage_users">Manage Users</string>
    <string name="view_products">View Products</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="add_product">+ Add Product</string>
    <string name="product_name">Product Name*</string>
    <string name="change_pass">Change Password</string>
    <string name="quantity">Quantity*</string>
    <string name="deliver">Delivery</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning!</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this data</string>
</resources>