<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".activities.admin.AddUpdateProductActivity">

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>