<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".activities.admin.AdminLandingScreenActivity">

    <Button
        android:id="@+id/btn_manage_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/manage_users"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_view_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_products"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/profile"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        />


</LinearLayout>