<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toRightOf="@id/tv_sign_in"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <EditText
            android:id="@+id/et_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            />

        <EditText
            android:id="@+id/et_sign_in_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            />

        <RadioGroup
            android:id="@+id/sign_in_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/sign_in_rb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"/>

            <RadioButton
                android:id="@+id/sign_in_rb_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <EditText
            android:id="@+id/et_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            />

        <EditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            />

        <EditText
            android:id="@+id/et_sign_up_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            />

        <RadioGroup
            android:id="@+id/sign_up_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/sign_up_rb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"/>

            <RadioButton
                android:id="@+id/sign_up_rb_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>